# qt-lab

./: CMakeLists.txt
CONV/: CMakeLists.txt  mainwindow.h
Converter/: CMakeLists.txt  converter.cpp  converter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Converter release/: CMakeLists.txt  convert.cpp  convert.h  convertlength.cpp  convertlength.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
HelpDesk/: CMakeLists.txt  csvticketrepository.cpp  csvticketrepository.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ticket.h  ticketdialog.cpp  ticketdialog.h  ticketdialog.ui  ticketsortfilterproxymodel.cpp  ticketsortfilterproxymodel.h  tickettablemodel.cpp  tickettablemodel.h
PasswordManager/: CMakeLists.txt
PasswordManager/src/: databasemanager.cpp  databasemanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordmodel.cpp  passwordmodel.h  passwordproxymodel.cpp  passwordproxymodel.h  record.h  repository.cpp  repository.h
QuickPad/: mainwindow.ui
Quick_pad/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
TypingTrainer/: CMakeLists.txt  keyboardwidget.cpp  keyboardwidget.h  lessonloader.cpp  lessonloader.h  lessonmodel.cpp  lessonmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  textdisplaywidget.cpp  textdisplaywidget.h
TypingTrainer/lessons/: 01_home_row.txt  02_common_words.txt  03_numbers_symbols.txt  04_python_code.txt  05_lorem_ipsum.txt
proga/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
scoreboard/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h
